--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,9 +1,13 @@
 [defaults]
 inventory = myhosts
-#host_key_cheking = False
+host_key_checking = False
+remote_user = fluoro
+ask_pass = True
 
-[paramiko_connection]
-record_host_keys = False
 
-[ssh_connection]
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null
+
+#[paramiko_connection]
+#record_host_keys = False
+
+#[ssh_connection]
+#ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null
